--- a/scss/src/foundation/_colors.scss
+++ b/scss/src/foundation/_colors.scss
@@ -27,7 +27,10 @@ $btn-primary-bg-hover: var(--dse-btn-primary-bg-hover, $green-light) !default;
 $form-border-color: var(--dse-form-border-color, $white-dark) !default;
 $form-bg-color: var(--dse-form-bg-color, $white) !default;
 $form-bg-option-selected: var(--dse-form-bg-option-selected, $green) !default;
-$form-color-option-selected: var(--dse-form-color-option-selected, $white) !default;
+$form-color-option-selected: var(
+  --dse-form-color-option-selected,
+  $white
+) !default;
 $form-bg-color-hover: var(--dse-form-bg-color-hover, $white-dark) !default;
 $form-color: var(--dse-form-color, $dark) !default;
 $form-bg: var(--dse-form-bg, $white) !default;
@@ -35,13 +38,9 @@ $form-error-color: var(--dse-form-error-color, $red) !default;
 $form-error-border: var(--dse-form-error-border, $red) !default;
 $form-border-focus-color: var(--dse-form-border-focus-color, $green) !default;
 
-
 /*=============================================
 =            App Bar colors            =
 =============================================*/
 
-$appbar-bg-color: var(--appbar-bg-color, #6202EE) !default;
+$appbar-bg-color: var(--appbar-bg-color, #6202ee) !default;
 $appbar-text-color: var(--appbar-text-color, #0000) !default
-
-
-
