--- a/scss/src/foundation/_variables.scss
+++ b/scss/src/foundation/_variables.scss
@@ -68,7 +68,7 @@ $blue-light: #b4d2f4;
 /* Font families */
 
 $playfair: "Playfair Display", serif; /* 1 */
-$raleway: "Raleway", "HelveticaNeue", "Helvetica", sans-serif; /* 2 */
+$raleway: "Raleway", "HelveticaNeue", "Arial", sans-serif; /* 2 */
 
 /* Font sizes */
 $fs-xs: 0.75rem; // 12px
@@ -76,7 +76,6 @@ $fs-sm: 0.875rem; // 14px
 $fs-base: 1rem; // 16px
 $fs-lg: 1.125rem; // 18px
 $fs-xl: 1.5rem; // 24px
-
 
 /* Heading font sizes */
 $h-1: 1.375rem; // 22px
@@ -105,10 +104,36 @@ $fw-black: 900;
 $breakpoints: (
   md: 48rem,
   // 768px
-    lg: 64rem,
+  lg: 64rem,
   // 1024px
-    xl: 80rem,
+  xl: 80rem,
   // 1280px
 );
 
 /*=====  End of Breakpoints  ======*/
+
+/*=============================================
+=            Spacing            =
+=============================================*/
+
+$spacing: (
+  none: 0rem,
+  xxxs: 0.25rem,
+  // 4px
+  xxs: 0.5rem,
+  // 8px
+  xs: 0.75rem,
+  // 12px
+  sm: 1rem,
+  // 16px
+  md: 1.5rem,
+  // 24px
+  lg: 2rem,
+  // 32px
+  xl: 3rem,
+  // 48px
+  xxl: 4.5rem,
+  // 72px
+  xxxl: 6rem,
+  // 96px
+) !default;
